# oracle-aggregator

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: release.yml
oracle-aggregator/: Cargo.toml
oracle-aggregator/src/: circuit_breaker.rs  contract.rs  errors.rs  lib.rs  oracle_aggregator.rs  price_data.rs  storage.rs  types.rs
src/: circuit_breaker.rs  contract.rs  errors.rs  lib.rs  mock_oracle.rs  price_data.rs  storage.rs  testutils.rs  types.rs
src/tests/: mod.rs  snapshot.rs  test_admin.rs  test_block_unblock.rs  test_initialize.rs  test_lastprice.rs  test_reflector.rs  test_remove_asset.rs
test-suite/: Cargo.toml
test-suite/src/: lib.rs  mock_oracle.rs  oracle_aggregator.rs
test-suite/tests/: mod.rs  test_initialize.rs  test_lastprice.rs  test_price.rs  test_prices.rs  test_remove_asset.rs
