[package]
name = "oracle-aggregator"
version = "0.1.0"
authors = ["Script3 Ltd. <gm@script3.io>"]
license = "AGPL-3.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[profile.release]
opt-level = "z"
overflow-checks = true # DEV: Do not remove this check - doing so will create vulnerabilities
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = "20.5.0"
sep-40-oracle = "1.0.0"

[dev_dependencies]
soroban-sdk = { version = "20.5.0", features = ["testutils"] }
sep-40-oracle = {version = "1.0.0",  features = ["testutils"]}