[package]
name = "test-suite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default=["testutils"]
testutils = []

[dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
oracle-aggregator = { path = "../oracle-aggregator", features = ["testutils"] }
